--- a/package.json
+++ b/package.json
@@ -25,22 +25,24 @@
     "grunt-karma": "^0.10.1",
     "grunt-newer": "^0.7.0",
     "grunt-ng-annotate": "^0.10.0",
+    "grunt-php": "^1.5.1",
     "grunt-svgmin": "^0.4.0",
     "grunt-usemin": "^2.1.1",
+    "imagemin": "^0.4.9",
+    "imagemin-gifsicle": "^5.1.0",
+    "imagemin-jpegtran": "^5.0.2",
+    "imagemin-optipng": "^5.2.1",
+    "imagemin-pngquant": "^5.0.0",
+    "imagemin-svgo": "^0.1.1",
     "jasmine-core": "^2.1.3",
     "jshint-stylish": "^0.2.0",
     "karma": "^0.12.31",
     "karma-jasmine": "^0.3.5",
     "karma-phantomjs-launcher": "^0.1.4",
     "load-grunt-tasks": "^0.4.0",
+    "socket.io": "^1.7.3",
     "time-grunt": "^0.3.1",
-	"imagemin" : "^0.4.9",
-	"imagemin-gifsicle" : "^5.1.0",
-	"imagemin-jpegtran" : "^5.0.2",
-	"imagemin-optipng" : "^5.2.1",
-	"imagemin-pngquant" : "^5.0.0",
-	"imagemin-svgo" : "^0.1.1",
-	"socket.io" : "^1.7.3"
+	"grunt-php": "^1.5.1"
   },
   "engines": {
     "node": ">=0.10.0"
